--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "**Judgemark V2** is a benchmark that evaluates how well a languag
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "loguru>=0.7.3",
     "matplotlib>=3.7",
     "python-dotenv>=1.1.1",
     "scipy>=1.10",
